# LearningWithDjango

./: README.md  base.html  home.html  models.py  pyproject.toml  result.py  settings.py  urls.py  views.py
